@@ -1,17 +1,17 @@
 Package: TunePareto
 Type: Package
-Title: Multi-objective parameter tuning for classifiers
-Version: 2.4
-Date: 2014-03-12
+Title: Multi-Objective Parameter Tuning for Classifiers
+Version: 2.5
+Date: 2018-06-08
 Author: Christoph Müssel, Ludwig Lausser, Hans Kestler
 Maintainer: Hans Kestler <hans.kestler@uni-ulm.de>
-Description: Generic methods for parameter tuning of classification algorithms using multiple scoring functions
+Description: Generic methods for parameter tuning of classification algorithms using multiple scoring functions.
 Suggests: snowfall, desire, igraph, gsl, class, tree, e1071,
         randomForest, klaR
 License: GPL-2
 LazyLoad: yes
 Encoding: UTF-8
-Packaged: 2014-03-12 10:09:51 UTC; muessel
 NeedsCompilation: yes
+Packaged: 2018-06-08 13:57:17 UTC; kraus
 Repository: CRAN
-Date/Publication: 2014-03-30 21:50:28
+Date/Publication: 2018-06-08 15:30:21 UTC
