@@ -1,15 +1,15 @@
-1f82b18ef739d800b7c2aaf9ae089720 *DESCRIPTION
-9d527854a2e9757a74a9d78604bcdfcd *NAMESPACE
-51c870f9ebd63b80c19ab92f03e3c754 *R/classifiers.R
+6fec73a2ff5bb233a97629623c21a6cb *DESCRIPTION
+49ee028cfef682c85f2c345832039d56 *NAMESPACE
+12c90f2fc9ffa19b78b42d8e803b12bd *R/classifiers.R
 44711dd33d69137ddae36288a4313b0a *R/desirability.R
-3db2b39b18f15b3ce40b41904b6b7e6c *R/helpers.R
+cd970173ac12403272cdb83fdb33cffe *R/helpers.R
 6692a80d3c398b53bef59580cdadfe6b *R/objectiveFunctions.R
 5052e8a21a9596f2afe88b0821b36175 *R/random.R
-0eda43bd0399d5e7fb181551d6ddd8bb *R/tunePareto.R
-e6948a41c93c67c51f04dd6a905cc9ae *R/visualizations.R
+fd082fd58adb883c38a8c87e06a6d3b1 *R/tunePareto.R
+0a9c9a60caef83c5bd3f0aafe8fa900d *R/visualizations.R
 d10699a389b50866af28cec47563be3b *inst/CITATION
-293c17a8792af20967c4b53219a64261 *inst/NEWS.Rd
-9d07f4dd68b5867e5924680fe366e905 *man/TunePareto-package.Rd
+25764308ebc5a2e6440b1d24cb58fd4d *inst/NEWS.Rd
+dfba481848f564fc0fa604e9de3c50ca *man/TunePareto-package.Rd
 44388f9a4cad2b5ad299c2aadc08c80f *man/allCombinations.Rd
 a4b59d8f7bc0d162d6fd51f7a579f598 *man/as.interval.Rd
 9df4759832b81c07af2d50d11ffbb230 *man/createObjective.Rd
@@ -28,4 +28,5 @@ d0e7b62489abdeda395ea336477d3c51 *man/rankByDesirability.Rd
 5c2b406126cedd5081169fd6d1e5ed08 *man/trainTuneParetoClassifier.Rd
 4e631b1c2dc56f203a3abdf70ecd337f *man/tunePareto.Rd
 894ef5c5c5858aa31ea2126bc6c853ea *man/tuneParetoClassifier.Rd
-f0c04b3a5dff246e5d35a11f4a523549 *src/TunePareto.c
+2cd6bc373e807c4e076ffa4236bc51a0 *src/TunePareto.c
+fca8433060cda40aac0e9e8fa23cd996 *src/TunePareto_init.c
