@@ -1,0 +1,23 @@
+#include <R.h>
+#include <Rinternals.h>
+#include <stdlib.h> // for NULL
+#include <R_ext/Rdynload.h>
+
+/* FIXME: 
+   Check these declarations against the C/Fortran source code.
+*/
+
+/* .Call calls */
+extern SEXP calculateDominationMatrixC(SEXP, SEXP);
+
+static const R_CallMethodDef CallEntries[] = {
+    {"calculateDominationMatrixC", (DL_FUNC) &calculateDominationMatrixC, 2},
+    {NULL, NULL, 0}
+};
+
+void R_init_TunePareto(DllInfo *dll)
+{
+    R_registerRoutines(dll, NULL, CallEntries, NULL, NULL);
+    R_useDynamicSymbols(dll, FALSE);
+}
+
